...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_description" />

    <Button
        android:id="@+id/btn_heart"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/drawable_circle"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_article_link" />

    <TextView
        android:id="@+id/tv_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:elevation="5dp"
        android:text="@string/send_one_heart_to_barbra"
...
