<resources>
    <string name="app_name">Barbra\'s Book</string>
    <string name="send_one_heart_to_barbra">Send one heart to Barbra</string>
    <string name="read_the_full_article">Read The Full Article:</string>
    <string name="article_header_image">Article Header Image</string>
    <string name="error_loading_articles">Error Loading Articles</string>
    <string name="barba_loves_you">Barbra loves you back</string>
    <string name="latest_title">Barb\'s Latest</string>
    <string name="article_key">abc123barbalovesme</string>
    <string name="image_of_article_header">Image of article header</string>
    <string name="api_failed">Failed to get new articles. Please check network status and try again.</string>
</resources>
